<resources>
    <string name="app_name">RgTravel</string>
    <string name="label_email">Email</string>
    <string name="label_pwd">Mot de passe</string>
    <string name="login_no_account">Pas de compte ?</string>
    <string name="btn_register">Je m\'inscris</string>
    <string name="btn_submit_connect">Se connecter</string>
    <string name="register_already_account">Déjà un compte ?</string>
    <string name="btn_login">Je me connecte</string>
    <string name="btn_submit_register">S\'inscrire</string>
    <string name="label_trip_name">Nom du voyage</string>
    <string name="placeholder_trip_name">Écrire le nom du voyage</string>
    <string name="label_trip_start">Date de début</string>
    <string name="label_trip_period">Période d\'enregistrement</string>
    <string name="btn_trip_submit">Créer le voyage</string>
    <string name="trip_form_title">Nouveau voyage</string>
    <string name="btn_back">Retour</string>
    <string name="title_no_trip">Vous n\'avez aucun voyage en cours</string>
    <string name="btn_new_trip">Ajouter un voyage</string>
    <string name="title_trip_active">Vous avez un voyage en cours</string>
    <string name="btn_access_trip">Mon voyage</string>
    <string name="btn_open_map">Voir la carte</string>
    <string name="trip_title_coordinates">Liste des coordonnées GPS</string>
    <string name="column_latitude">Latitude</string>
    <string name="column_longitude">Longitude</string>
    <string name="column_date">Date</string>
    <string name="btn_stop_trip">Arreter le voyage</string>
    <string name="error_fields_missing">Tous les champs sont obligatoires</string>
    <string name="text_connection">Connexion</string>
    <string name="text_logout">Déconnexion</string>
    <string name="error_text_login">Erreur de connexion.\\nVérifiez vos identifiants</string>
    <string name="success_trip_create">Voyage créé</string>
    <string name="success_account_create">Compte créé</string>
    <string name="error_trip_create">Erreur lors de la création du voyage</string>
    <string name="success_stop_trip">Le voyage est terminé</string>
    <string name="success_save_position">Position enregistrée manuellement</string>
    <string name="error_save_position">Erreur lors de l\'enregistrement de la position</string>
    <string name="error_position_unavailable">Votre localisation ne peut pas être récupérée. Veuillez réessayer plus tard</string>
    <string name="error_position_denied">Vous n\'avez pas autorisé l\'accès votre localisation</string>
    <string name="error_camera_denied">Permission de la caméra refusée</string>
    <string name="success_save_picture">La photo est bien enregistrée</string>
    <string name="error_save_picture">Erreur lors de l\'enregistrement de la phot</string>
    <string name="error_generate_gpx">Erreur lors de la création du fichier GPX</string>
    <string name="error_generate_kml">Erreur lors de la génération du fichier KML</string>
    <string name="info_saving">Enregistrement en cours...</string>
    <string name="info_mail_send_gpx_kml">Envoie des fichiers GPX et KML</string>
    <string name="info_user_position">Votre position</string>
    <string name="info_coordinate_saved">Position enregistrée\npendant votre voyage</string>
    <!-- Strings used for fragments for navigation -->

</resources>