<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.upjv.LoginActivity">

    <EditText
        android:id="@+id/editTextLogin_email"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="42dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/textViewLogin_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textViewLogin_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:text="@string/label_pwd"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin_password"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin_password" />

    <EditText
        android:id="@+id/editTextLogin_password"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="62dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="62dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewLogin_password" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:text="@string/login_no_account"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="21dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FFFFFF"
        android:onClick="handleGoToRegister"
        android:text="@string/btn_register"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin_register"
        app:layout_constraintEnd_toEndOf="@+id/btnLogin_register" />

    <Button
        android:id="@+id/btnLogin_register"
        android:layout_width="278dp"
        android:layout_height="47dp"
        android:layout_marginBottom="79dp"
        android:onClick="handleClickLogin"
        android:text="@string/btn_submit_connect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView2" />

    <TextView
        android:id="@+id/textViewLogin_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="344dp"
        android:layout_marginBottom="13dp"
        android:text="@string/label_email"
        app:layout_constraintBottom_toTopOf="@+id/editTextLogin_email"
        app:layout_constraintStart_toStartOf="@+id/editTextLogin_email"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="18dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewLogin_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_bg" />

</androidx.constraintlayout.widget.ConstraintLayout>